Little change to systemd unit

--- a/pianocktail.service
+++ b/pianocktail.service
@@ -4,7 +4,7 @@ Description=Pianocktail service
 [Service]
 ExecStart=/usr/bin/twistd --nodaemon\
 			 			  --pidfile= \
-			 			  pianocktail --port 8888
+			 			  pianocktail --port tcp:8888
 User=piano
 Group=piano
 NonBlocking=true
